# HDiv

./: .gitignore  CMakeLists.txt  README.md
HDiv2D/: CMakeLists.txt  ErrorOnFaces.cpp  main_ZigZagMesh.cpp  meshgen.cpp  pzmixedelasmat.cpp  pzmixedelasmat.h
HDiv_Benchmarks/: CMakeLists.txt  HdivBenchmarks.cpp  NumericControl.cpp  TFracture.cpp  TFracture.h  THybridizeDFN.cpp  THybridizeDFN.h  THybridzeDFN.cpp  THybridzeDFN.h  TMultiphysicsMesh.cpp  TMultiphysicsMesh.h  TPZDarcyFlow.cpp  TPZDarcyFlow.h  TPZMixedDarcyFlow.cpp  TPZMixedDarcyFlow.h  TPZNormalDarcyFlow.cpp  TPZNormalDarcyFlow.h  TPZTracerFlow.cpp  TPZTracerFlow.h  dfn.cfg  path.h  path.h.in
HDiv_Benchmarks/docs/: #reporting_meshes.lyx#  reporting_meshes.lyx  reporting_meshes.lyx~
HDiv_Benchmarks/meshes/Case_1/: case_1.geo  case_1.msh  case_1_10k.msh  case_1_1k.msh  case_1_2.geo  case_1_hexa.geo  cube.msh  jose_simple.msh
HDiv_Benchmarks/meshes/Case_2/: case_2.geo  case_2.msh  case_2_32k.msh  case_2_34k.msh  case_2_4k.msh  case_2_500.msh  case_2_c.geo  case_2_c.msh  cube.geo  cube.msh  gmsh.msh
HDiv_Benchmarks/meshes/Case_3/: case_3.geo  case_3.msh  case_3_30k.msh  case_3_aux.geo  case_3_aux.msh  gmsh.msh
HDiv_Benchmarks/meshes/Case_4/: case_4.geo  case_4.msh  gmsh.geo  gmsh.msh  gmsh_original.geo  gmsh_reloaded.geo  gmsh_reloaded.msh
HDiv_Benchmarks/meshes/The cuttest cube/: case_test.geo  case_test.msh  cube.geo
HDiv_Benchmarks_II/: CMakeLists.txt  CreateDFN.cpp  CreateDFN.h  HDivBenchmarks_II.cpp  NumericControl.h  THybridizeDFN.cpp  TPZTracerFlow.cpp  TPZTracerFlow.h
(+22 files in other folders)
